# log4rs-routing-appender

./: .gitignore  .travis.yml  Cargo.toml  README.md
doc/v0.1.0/: search-index.js
doc/v0.1.0/implementors/core/fmt/: trait.Debug.js
doc/v0.1.0/implementors/log4rs/append/: trait.Append.js
doc/v0.1.0/implementors/log4rs/file/: trait.Deserializable.js  trait.Deserialize.js
doc/v0.1.0/implementors/log4rs_routing_appender/route/: trait.Route.js
doc/v0.1.0/log4rs_routing_appender/: RoutingAppender.t.html  RoutingAppenderBuilder.t.html  RoutingAppenderConfig.t.html  RoutingAppenderDeserializer.t.html  fn.register.html  index.html  sidebar-items.js  struct.RoutingAppender.html  struct.RoutingAppenderBuilder.html  struct.RoutingAppenderConfig.html  struct.RoutingAppenderDeserializer.html
doc/v0.1.0/log4rs_routing_appender/route/: Route.t.html  enum.Entry.html  index.html  sidebar-items.js  struct.Appender.html  struct.Cache.html  struct.OccupiedEntry.html  struct.VacantEntry.html  trait.Route.html
doc/v0.1.0/log4rs_routing_appender/route/pattern/: PatternRouter.t.html  PatternRouterConfig.t.html  PatternRouterDeserializer.t.html  index.html  sidebar-items.js  struct.PatternRouter.html  struct.PatternRouterConfig.html  struct.PatternRouterDeserializer.html
doc/v0.1.0/src/log4rs_routing_appender/src/: lib.rs.html  serde.rs.html
doc/v0.1.0/src/log4rs_routing_appender/src/route/: mod.rs.html
doc/v0.1.0/src/log4rs_routing_appender/src/route/pattern/: mod.rs.html  parser.rs.html  serde.rs.html  template.rs.html
src/: lib.rs  route.rs  serde.rs  serde.rs.in
src/route/: mdc.rs  mod.rs
src/route/mdc/: mod.rs  serde.rs  serde.rs.in
src/route/pattern/: mod.rs  parser.rs  serde.rs  serde.rs.in  template.rs
tests/: pattern.rs
