[package]
name = "log4rs-routing-appender"
version = "0.1.0"
authors = ["Steven Fackler <sfackler@gmail.com>"]

[features]
pattern-router = ["file", "log-mdc", "ordered-float"]

file = ["log4rs/file", "serde", "serde-value"]

[dependencies]
antidote = "1.0"
log = "0.3"
log-mdc = { version = "0.1", optional = true }
log4rs = { git = "https://github.com/sfackler/log4rs", default_features = false }
lru-cache = "0.1"
serde = { version = "0.8", optional = true }
serde-value = { version = "0.3", optional = true }
ordered-float = { version = "0.2", optional = true }
