[package]
name = "log4rs-routing-appender"
version = "0.4.0"
authors = ["Steven Fackler <sfackler@gmail.com>"]
description = "A routing appender for log4rs"
license = "MIT/Apache-2.0"
repository = "https://github.com/sfackler/log4rs-routing-appender"
readme = "README.md"

[features]
default = ["pattern-router", "file"]

pattern-router = ["file", "log-mdc", "ordered-float"]

file = ["log4rs/file", "serde", "serde_derive", "serde-value", "humantime"]

[dependencies]
antidote = "1.0"
humantime = { version = "1.0", optional = true }
linked-hash-map = "0.5"
log = "0.4"
log-mdc = { version = "0.1", optional = true }
log4rs = { version = "0.8", default_features = false }
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }
serde-value = { version = "0.5", optional = true }
ordered-float = { version = "0.5", optional = true }

[dev-dependencies]
log4rs = { version = "0.8", default_features = false, features = ["file"] }
serde_yaml = "0.7"
